--- a/ramdisk/ueventd.msm7x27.rc
+++ b/ramdisk/ueventd.msm7x27.rc
@@ -23,6 +23,7 @@
 
 
 ## Graphics
+/dev/kgsl                    0666  root      root
 /dev/kgsl-3d0                0666  root      root
 /dev/kgsl-2d0                0666  root      root
 /dev/kgsl-2d1                0666  root      root
