--- a/ramdisk/etc/ueventd.msm7x27.rc
+++ b/ramdisk/etc/ueventd.msm7x27.rc
@@ -21,6 +21,8 @@
 # the DIAG device node is not world writable/readable.
 /dev/diag                    0660  system    qcom_diag
 
+# allow wpa_supplicant access to rfkill dev
+/dev/rfkill                  0660  wifi      wifi
 
 ## Graphics
 /dev/kgsl                    0666  root      root
