--- a/ramdisk/init.msm7x27.parts.rc
+++ b/ramdisk/init.msm7x27.parts.rc
@@ -1,1 +1,14 @@
-## template
+## Miscellaneous services/config
+
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --baudrate 3000000 --patchram /system/etc/firmware/BCM2049C0_003.001.031.0088.0094.hcd /dev/ttyHS0
+    class main
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+    oneshot
+
+service memsicd /system/bin/memsicd
+    class main
+    user root
+    group root
+    oneshot
