--- a/ramdisk/init.msm7x27.rc
+++ b/ramdisk/init.msm7x27.rc
@@ -1,6 +1,6 @@
 import /init.${ro.hardware}.parts.rc
 import /init.${ro.hardware}.usb.rc
-import /init.${ro.hardware}.bluez.rc
+import /init.${ro.hardware}.bluetooth.rc
 
 on init
     insmod /lib/modules/fsr.ko
@@ -16,7 +16,7 @@ on early-init
     mkdir /sd-ext 0771 system system
     # sdcard
     mkdir /storage 0050 system sdcard_r
-    mkdir /storage/sdcard0 0755 system system
+    mkdir /storage/sdcard0 0000 system system
     mkdir /storage/usbdisk0 0000 system system
     symlink /storage/sdcard0 /mnt/sdcard
     symlink /storage/sdcard0 /sdcard
@@ -34,18 +34,7 @@ on fs
     chmod 0666 /dev/graphics/fb0
 
     # mount file system
-    mount_all /fstab.msm7x27
-
-    chown radio /dev/bml7
-    chown radio /dev/bml10
-    chown radio /dev/bml11
-
-    write /sys/block/stl12/queue/read_ahead_kb 4
-    write /sys/block/stl13/queue/read_ahead_kb 4
-    write /sys/block/stl14/queue/read_ahead_kb 4
-    write /sys/devices/virtual/block/stl12/queue/read_ahead_kb 4
-    write /sys/devices/virtual/block/stl13/queue/read_ahead_kb 4
-    write /sys/devices/virtual/block/stl14/queue/read_ahead_kb 4
+    mount_all /fstab.msm7x27    
 
 on boot
 
@@ -122,7 +111,7 @@ on property:persist.service.adb.enable=0
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd_wlan0
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211,wext -iwlan0 -W -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211,wext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
@@ -133,7 +122,7 @@ service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -aABDKL
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     class main
     disabled
     oneshot
@@ -160,19 +149,6 @@ service qmuxd /system/bin/qmuxd
     user radio
     group system radio inet
     disabled
-
-service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --baudrate 3000000 --patchram /system/etc/firmware/BCM2049C0_003.001.031.0088.0094.hcd /dev/ttyHS0
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-service memsicd /system/bin/memsicd
-    class main
-    user root
-    group root
-    oneshot
 
 service get_macaddrs /system/bin/get_macaddrs
     class main
